--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
     <!-- Have to add GCM id here -->
     <string name="gcm_defaultSenderId">0000</string>
     <string name="title_activity_user">UserActivity</string>
@@ -15,4 +16,22 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="outlets">Outlets Fragment</string>
+    <string name="deals">Deals Fragment</string>
+    <string name="orders">Orders Fragment</string>
+
+    <!-- Navigation Drawer -->
+    <string name="nav_item_outlets">Outlets</string>
+    <string name="nav_item_dd">Daily Deals</string>
+    <string name="nav_item_myOrders">My Orders</string>
+
+    <!-- navigation drawer item labels  -->
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_outlets</item>
+        <item>@string/nav_item_dd</item>
+        <item>@string/nav_item_myOrders</item>
+    </string-array>
+
 </resources>
