--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <!-- Have to add GCM id here -->
-    <string name="gcm_defaultSenderId">0000</string>
+    <string name="gcm_defaultSenderId">671150531291</string>
     <string name="title_activity_user">UserActivity</string>
 
     <string name="title_section1">Section 1</string>
@@ -26,6 +26,8 @@
     <string name="nav_item_outlets">Outlets</string>
     <string name="nav_item_dd">Daily Deals</string>
     <string name="nav_item_myOrders">My Orders</string>
+    <string name="DailyDealOff">0</string>
+    <string name="DailyDealOn">1</string>
 
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
